--- a/index.html
+++ b/index.html
@@ -6,7 +6,51 @@
     <title>Document</title>
     <link rel="stylesheet" href="Style/style.css">
 </head>
-<body>
-    
+<body class="work-sans-font">
+    <header class="bg-header">
+  
+            <nav class="navbar display-flex">
+                <h1 class="brand">G3 Architects</h1>
+                <ul class="nav-itmes display-flex">
+                    <li class="nav-item"><a href="" class="nav-links">Home</a></li>
+                    <li class="nav-item"><a href="" class="nav-links">About </a></li>
+                    <li class="nav-item"><a href="" class="nav-links">Contact Us</a></li>
+                    <li class="nav-item"><a href="" class="nav-links"> Login </a></li>
+                </ul>
+            </nav>
+      <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New 
+                Group of Architects 
+                </h1>
+                <p class="banner-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="banner-img" src="images/banner.png" alt="banner photo" srcset="">
+      </div>
+        
+    </header>
+    <main>
+        <section class="main display-flex">
+
+            <div class="main-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="main-content">
+                <h3 class="main-cont-head"> <span id="Quick-list">Quick list</span>
+                     <span id="of-our">of Our</span> <br>
+                     <span id="Features">Features</span></h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
